--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appReservas",
+  "name": "appReserva",
   "version": "1.0.0",
   "description": "Gestor de reservas de mesas en un restaurante",
   "main": "server.js",
